<resources>
    <string name="app_name">ShoeStore</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="user_prompt">Username:</string>
    <string name="password_prompt">Password:</string>
    <string name="login_button">Login with account details</string>
    <string name="button_create_new_account">Create new account</string>
    <string name="button_instructions">Click for instructions</string>
    <string name="shoes_image">shoes_image</string>
    <string name="welcome_login">You are logged in as %1$s</string>
    <string name="welcome_new">New account created for %1$s</string>
    <string name="proceed_text">Please click the button below to continue</string>
    <string name="button_to_shoe_list">Shoe List</string>
    <string name="title_instructions">Instructions</string>
    <string name="instructions">
        This app allows you to create a shoe inventory list by entering te details of
        all shoes currently in stock \n\n

        Shoes are displayed on a list screen. A plus button in the lower right corner
        of the list page will open \'New Shoe\' entry form to add detail of the next item
        for inclusion in the list.

    </string>
    <string name="shoe_list_title">Shoe models available:</string>
    <string name="add_new_shoe">Add new shoe</string>
    <string name="shoe_name">Shoe Name</string>
    <string name="prompt_shoe_name">Enter shoe name</string>
    <string name="company_label">Company</string>
    <string name="shoe_size_label">Shoe size: </string>
    <string name="description_label">Description</string>
    <string name="save_button">Save</string>
    <string name="cancel_button">Cancel</string>
    <string name="option_logout_text">Logout</string>
</resources>
